		  value of Accept, this could create a thread with a NULL socket.
		* Added two new commands to amulecmd(DLG), GetIPLevel and
		  SetIPLevel <new level>.
		* Rewrote most of the wxString usage of amule web server in
		  ExternalConn.cpp. There should be some speed improovement.
		* Removed pop up when web server requested ed2k source link
		  and amule was low id.

	rommel:
		* Patch to implement the commands serverconnect and reloadipf
		  in amulecmd.

	ThePolish:
		* i18n amule log lines (server window)
		* amulecmd and webinterface i18n fixes
		* Some win32 fixes (slashes and backslashes)
		* Automake 1.8 fixes
		* Add traditionnal Chinese translation (zh_TW) from Paul (Thanks !)
		* Add it, nl, fr, pl, es, eu translation updates (Thanks to all translators)
		* Fix copyright for alc icons
		* Replace amule, wxCas, alc .ico simple icons by icons group .ico
		* Replace alcc's printf by wxLogMassage
		* Make runtime to be in seconds in amulesig.dat
		* Modify Xas to handle runtime in seconds
		* Modify wxCas to handle runtime in seconds
		

Version 2.0.0rc5 - The 'Let's recover our release speed' version.
----------
2004-07-18

	deltaHF:
	        * Better sorting of some columns

	Kry:
		* Some gui design and coding of the upcoming Kad window
		* Protocol update:
			* UDP protocol upgraded to eMule 0.43b
			* TCP Standard Base protocol upgraded to eMule 0.43b
			* TCP Extended Base protocol upgraded to eMule 0.43b
		* Fixed memory corruption and crashes on 'cas'
		* Fixed gsocket-2.5.c for big endian archs.
		* Fixed CFile class to actually return error when a error ocurred and not only when it feels like.
		* Fixed bug where the 'All' category could be removed leading to crashes and other funny behaviours.
		* No more minimize when no tray has been selected.
		* Fixed browse skin file button to actually browse a file ;)
		* Fixed high 32 bits of transfered bytes not being loaded on known.met (sorry fluffly!)
		* Some Mac bugfixes.

	Hetfield: